--- a/TODO
+++ b/TODO
@@ -1,10 +1,15 @@
-* Bugs:
+* Bugs and deficiencies:
+** -help: cm is shadowed by cmblock
+
 ** User variable highlighting does not take into account
    a.) a clearing of variables and b.) usage of variables before their
    definitions (uninitialised variables) c.) the variable
-   fontification clashes with Ansys specifiers
+   fontification might clash with Ansys specifiers d.) string
+   substitution of %variables% in in strings does not highlight them
+   in the variable font
 
 ** highlighting of % and & operators in comments 
+** VAR*VAR highlighting problem, when VAR clashes with Ansys command
 
 ** functions are not completed with parenthesis (`sin(')
 
@@ -16,29 +21,57 @@
 
 **  c*** command is not completed
 
-** the command help does not work when there are solver ignored
-   characters behind the command
-
-
 * v12.0.1:
-o what is hyper56?
-o bug: c*** highlighting,
-o write a function for % outside comments, not highlighted in comments!
-o condensed input line ($) behind commands without arguments possible?
-o Are characters behind unique commands shorter than 4 characters
-  possible? /sol(u) sufficient? 
-o *goto :branch with character labels such as :1 or :_2 possible?
-o update -mode-help README
-o clean and sort TODO
-o TODOs, FIXMEs in the code
-o file coding is unix problematic for windows?
-o Dieter's M-h
-o load or load-file, what happens with compilation and autoload?
-o check whether all undocumented commands are still working in v12
-o update emacs wiki, gcode wiki, todo- or org-mode for README, wiki
-  formatting!
+** workload
+- bugs
+*** features?
+- Dieter's M-h
 
-o publication with image: ANSYS.net (Ansys !!! Sheldon Imaoka
+- insert skeleton with C-c C-s when typing i
+*** miscellaneous
+- update -mode-help, README
+
+- what is now actually read from ENV?
+
+- TODOs, FIXMEs in the code
+
+- omission in fontification.el: c*** highlighting, harmless?
+
+- condensed input line ($) behind commands without arguments possible?
+
+- Are characters behind unique commands shorter than 4 characters
+  possible? /sol(u) sufficient?  have a look in
+  -variable-defining-commands!  Warn when - unintentionally -
+  arguments are used for Ansys commands which do not allow arguments.
+  Or implement some auto-newline feature?  But problematic in
+  condensed command lines or when applying code comments!
+
+- *goto :branch with character labels such as :1 or :_2 possible?
+
+- file coding is unix problematic for window systems?
+
+- load or load-file, what happens with compilation and autoload?
+
+- check whether all undocumented commands are still working in v12
+
+** general release procedures
+
+- update the mode help
+  complete skeleton menus.
+  update defcustom list in ansys-submit-bug-report
+  checkdoc
+  then dry run: Emacs 23.1 -Q testing: fontification,padt.mac /*commands
+  and default command lines, every menu entry.
+  byte-compile-file
+  then dry run
+  profiling, major mode conventions: multiple loading of this
+  mode?.
+
+- update Emacs wiki (README), Google Code with download package, home
+  page update all version numbers everywhere: Emacs wiki, Google Code
+  with download, home page, elpa?
+
+- publication emails (with image): ANSYS.net (Ansys !!! Sheldon Imaoka
   <sheldonimaoka@yahoo.com>), CadFem (Stephan Gotthold
   sgotthold@cadfem.de, Nelson <tnelson@cadfem.de>, Hanke , Krueger
   <lkrueger@cadfem.de>), Alwin Perras
@@ -47,19 +80,104 @@ o publication with image: ANSYS.net (Ansys !!! Sheldon Imaoka
   guys (PADT) <info@padtinc.com>, Holger Sparr
   <sparr@mfkrs1.mw.tu-dresden.de>. Razvan.Curtean@continental-corporation.com
 
+- Emacs package repository, elpa http://tromey.com/elpa/?
+
+- Emacs installation archive for Ansys under XP, default.el in
+  site-lisp dir and byte-compiled ansys-mode?
+
+** schedule
+
+-- January (workload, stabilisation)
+
+-- February (freeze & checking & branching to 12.1.1 or 12.0.2)
+
+1.) bugs & documentation & updating
+2.) working state, compiling
+3.) feature freeze & checking
+4.) read Ansys release notes of 12.1 -> branch
+
+-- April (release)
+
+0.) XP-Emacs package?
+3.) updating
+4.) release and publishing
+5.) enquire for users' meeting
+6.) presentation, ask Alwin for taking part in analysts' meeting
+
+ a.) Need private LICENSE!
+     Ansys academic solutions for V11
+ b.) The ultimate kick: Linux Notebook with windows emulation?
+
+--- October/November
+
+User's meeting
+
+*** presentation
+-- Very brief introduction: Why not Emacs?  Especially on Windows
+   Programmed before Microsoft was even founded, working on all
+   current OS All bells and whistle of a modern editor (drop file into
+   E)
+
+-- casual APDL file viewer (whetting the appetite)
+   convenience features?
+   syntax fontification, especially variable highlighting
+   Ansys menu
+   command-help   M-n/p M-?
+   code navigation (number blocks in .inp) C-c {
+
+-- APDL hacking
+   C-c C-u, C-c C-c
+   $ needs space(s)?
+   ansys completion and emacs expansion C-c ] -- -close-block
+   ,commands
+   colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
+   preview insert skeletons (alternatively abbrev mode?)
+   display user variables
+   *go not for interactive mode! -> *if *else *endif
+   commenting out
+   selecting blocks C-M-a/b setting mark!
+   loading help navigator
+   display license status	-license-status C-c C-l
+
+-- hardcore Ansys/APDL user <- Linux Notebook/machine
+   switch off menu, tools, scroll-bar
+   Ansys mode help
+   Emacs-calc
+   - C-c @ outline stuff with indirect-buffer
+   online Ansys/Emacs process and debugging environment
+   C-c C-u, C-c C-c,  C-c C-q
+   tail mode of *.err C-c C-e
+   abort file
+   bookmarks?
+
 * Further versions
-- replace -find-duplicate-p with function argument to add-to-list
 
-- documentation in info format, better documentation, info file,
-  refcard, etc; Emacs help guidelines GNU programming guideline: More
-  requires?, indicate replacement of standard Emacs facilities (e. g
-  M-C-n, M-C-p), profiling, major mode conventions: multiple loading
-  of this mode?.
+** Parameter help and documentation
+
+- documentation in info format, refcard, etc; Emacs help guidelines
+  GNU programming guideline: More requires?,
+
+- indicate replacement of standard Emacs facilities (e. g M-C-n,
+  M-C-p, M-h)
   
-- use abbrev facility for changing deprecated element types
+- display alternatives to/swap deprecated element types
 
-- optimise -start-run with query of y (start immediately),n (exit),e
-  (change params),C-h (help)
+- M-? the command help does not work when there are solver ignored
+  characters behind the unique command name, example: *VWROOOO.
+
+- M-? Provide also help for commented out commands
+
+- M-?: following a variable allocation with `='
+
+- Provide Ansys command completion and command-help in comint buffer
+
+- trigger a timer when showing the ansys-comand-parameter-help
+
+- Include the _RETURN value of the solid modelling
+  commands into their help strings of parameter help.  
+
+** Ansys interpreter buffer
+   example: gnuplot-mode
 
 - read env, try to ask only for the installation directory for the
   ansys-license-file, -program, etc.  variables.  Read some
@@ -69,325 +187,202 @@ o publication with image: ANSYS.net (Ansys !!! Sheldon Imaoka
 
 - make filter of -license-status optionally  
 
-- substitute text "header" in -variable-view and skeleton-preview for
-  an overlay
+- optimise -start-run with query of y (start immediately),n (exit),e
+  (change params),C-h (help)
 
 - C-c C-q sequences are not shown (and stored) in the comint buffer
 
-  - M-?: for commented out variables
-  - M-?: unambiguous commands with following, solver ignored characters
-  - M-?: following a variable allocation with `='
-  - Mohr-Coulomb criterion
-  - For non-comint-mode usage: display .log file with tail mode
-  - explain what a "logical block" means
-  - indent format line? M-j
-  - autoinsertion: choice between header only or header with skeleton compilation
-  - is outline-mode enabled? no! make default?, outline headers are not complete in skeletons.
-  - rework ansys-skeleton and documentation   
-  - Skeleton preview read only? currently: writable
-  - make outline string in skeletons configurable
-  - why an alist with cons cells for try-completion, a list of strings
-    should suffice?
-  - C-c C-c skips empty lines and comments this is not always
-    desirable -> make this optional -> filter process input?
-  - take care when region isn't complete in -send-to-ansys (send whole line)
+- Splice any input line behind the BEGIN: symbol in the *Ansys* buffer
 
-** Killing a buffer with a running process now asks a confirmation.
+- Enable one run for every Ansys macro buffer
+
+- substring-no-properties necessary? Does not seem to be the case...
+
+
+- Ansys process status is not working properly process-sentinel or
+  some comint-hook?  check for EXIT command and wait some time to
+  update the mode line run status correctly
+
+- indicate with activation/inactivation of menu items that an
+  asynchronous job is already running or not.
+
+- show/mark sent lines in apdl file C-c C-u, C-c C-c,
+     o with fringes
+     o with background
+     o maximum line
+     o reset highlighting, when?
+
+- provide Ansys `y' request and carriage return? superflouous?
+     a single `y' does the trick
+
+- Killing a buffer with a running process now asks a confirmation.
    You can remove this query in two ways: either removing
    `process-kill-buffer-query-function' from
    `kill-buffer-query-functions' or setting the appropriate process
    flag with `set-process-query-on-exit-flag'.
 
-* improve Ansys interpreter buffer with `comint-mode'
-   example: gnuplot-mode
-   - Enable one run for every Ansys macro buffer
-   - substring-no-properties necessary? Does not seem to be the case...
-   - Provide Ansys command completion and command-help in comint buffer
-   - Ansys process status is not working properly process-sentinel or
-     some comint-hook?  check for EXIT command and wait some time to
-     update the mode line run status correctly
-   - indicate with activation/inactivation of menu items that an
-     asynchronous job is already running or not.
-   - show/mark sent lines in apdl file C-c C-u, C-c C-c,
-     o with fringes
-     o with background
-     o maximum line
-     o reset highlighting, when?
-   - provide Ansys `y' request and carriage return? superflouous?
-     a single `y' does the trick
+- finding an Ansys /filnam command in current macro file and
+  suggesting this as current job-name optionally kill old job when
+  called again with working run warn and optionally remove the ansys
+  lock file before starting a run
 
-* Dissect skeleton into smaller more useful subjects
-  - insert skeleton with C-c C-s when typing twice
-  - spider beams, _bolt.mac, screw.mac
-  - rework concept with respect to the Ansys menu structure
-    sort skeletons in menu
-  - Make skeleton-header properly working (info "(autotype)")
-  - Optimise templates: completing-read, read-from-minibuffer abbrev `d
-    does not indent properly in another block level Implement choice when
-    completing *IF commands (*ELSEIF or *ENDIF ?THEN?).
-  - Warn when including skeleton in read only file.
-  - skeleton for numbering ansys-skeleton-numbering-controls
-    (skeleton-insert docu)
-  - suggestions with auto-completion of kp,line,area,volu,node,elem,tabn,sval
-  - negation, what negation?
-  - skeleton for skipping code	 *if,then *else*endif
-    if selection: wrap around and indenting
-    *go/*if label is not fontified at the command line (restriction of 7 characters with out the colon.)
-    must *go:label be unambiguous?
+** Skeletons and abbrevs
 
-* *set strings may only be 32 character long!
-* trigger a timer when showing the ansys-comand-parametr-help
-* add cmblock and cm assignments to the variable list
+- make outline string in skeletons configurable
 
-* take care of setup procedure: v110/ansys/apdl/start110.ans
+- spider beams, _bolt.mac, screw.mac, Mohr-Coulomb criterion
+
+- rework concept with respect to the Ansys menu structure sort
+  skeletons in menu. Concept: 1.) Ansys Workflow 2.) specialised macro
+  library
+
+- Make skeleton-header properly working (info "(autotype)")
+
+- Optimise templates: completing-read, read-from-minibuffer
+
+- abbrev `d does not indent properly in another block level
+
+- Implement choice when completing *IF commands (*ELSEIF or *ENDIF
+  ?THEN?).
+
+- Warn when including skeleton in read only file.
+
+- skeleton for numbering ansys-skeleton-numbering-controls
+  (skeleton-insert docu)
+
+- suggestions with auto-completion of kp,line,area,volu,node,elem,tabn,sval
+
+- negation, what negation? TODO:
+
+- skeleton for skipping code *if,then *else*endif if selection: wrap
+  around and indenting *go/*if label is not fontified at the command
+  line (restriction of 7 characters with out the colon.)
+  must *go:label be unambiguous?
+
+** Miscellaneous
+
+- make M-C-h more intelligent like M-h
+
+- speed concern: replace -find-duplicate-p with function argument to
+  add-to-list
+
+- For non-comint-mode usage: display .log file with tail mode
+
+- is outline-mode enabled? no! make default?, outline
+
+- C-c C-c skips empty lines and comments this is not always
+    desirable -> make this optional -> filter process input?
+
+- take care when region isn't complete in -send-to-ansys (send whole line)
+
+- take care of setup procedure: v110/ansys/apdl/start110.ans
   /MPLIB,READ,/ansys_inc/v110/ansys/matlib
 
-* C-c C-v show (optionally) only variables defined up to current cursor line
+- C-c C-v show (optionally) only variables defined up to current
+  cursor line
 
-* C-j is not skipping to `,' whith default command (from second line onwards)!
+- C-j is not skipping to `,' whith default command (from second line
+  onwards)!
 
-* removing/renaming abort file?
+- removing/renaming abort file?
 
-* Improve ansys-show-command-parameters
-- undocumented aks parameter
-- explain also commented out commands   
-- Include the _RETURN value of the solid modelling
-commands into their help strings of parameter help.  
+- undocumented ask parameter
+
 - mode-line-format nil);no mode line for this buffer Unambiguous
-  Ansys commands with additional characters at the end are not found
-  in the parameter help (C-c C-h) example: *VWROOOO
 
-------------------------------
-dry run: Emacs 22.1 -Q testing: padt.mac /*commands and default
-command lines, every menu entry.
+- Emacs: old-style backquotes?  used in the old template macro system
 
-update Emacs wiki, Google Code with download, home page
+- create is only completed by *end
 
-publication
+- completion of function names: cursor should end within parentheses
 
-Emacs package repository, elpa http://tromey.com/elpa/
+- better hints for auto-insertion features
 
-Emacs installation for Ansys under XP, default.el in site-lisp dir
-and byte-compiled ansys-mode.
+- up/down-block when we are over a begin-keyword and in a block-end
+  line
 
-update all version numbers everywhere: Emacs wiki, Google Code with
-download, home page, elpa?
+- component names are fontified as variables! separate them cmlist?
 
-update the mode help
-update defcustom list in ansys-submit-bug-report
-checkdoc
-byte-compile-file
+- format string for *VWRITE: line(s) below, in parens, when FORTRAN
+  format specifiers are used, keyword SEQU povides row numbers, up to
+  19 parameters are allowed
 
+- remove vestiges of ansys-mod.el for making ansys-mode.el GPL proof.
+  Check whether octave-mod.el really is GPL compliant, use
+  -ctave-mod.el from 1997, kill octave-mod.el afterwards in makefile
+  read every symbol docu string ->NEW_C or _C or OCTAVE_C
 
-12.0.1
+- replace/extend column-ruler with ruler-mode or ruler implemented as
+  overlay in buffer
 
--- New Year
+- make everything completely customisable, eg auto-insert stuff
+  customisable enable, Emacs customisation of auto-insert-query
 
-1.) - comint-mode
-    - proper skeletons
-2.) working state, compiling
---
-3.) feature freeze & checking
-4.) publishing
-5.) ask Alwin for taking part in analysts' meeting
+- Fontify *completion list* distinguishing elements: commands,
+  functions and keywords.
 
--- April
+- provide a list of options for the -license function, set this
+  function in the defcustom lmstat -a etc.
 
-User's meeting
-October/November
+- make the line number display in `ansys-display-variables'
+  (hyper-)links to the corresponding code line in the respective APDL
+  file.  (See `occur' function.)  Or use the imenu mechanism for this
+  and display the variables in the speedbar
 
-1.) Need private LICENSE!
-     Ansys academic solutions for V11
-2.) Linux Notebook with windows emulation?
+- auto-indent-switch as defcustom?
 
--- Very brief introduction: Why not Emacs, especially on Windows?
-Programmed before Microsoft was even founded, working on all current OS
-All bells and whistle of an editor (drop file into E)
--- casual APDL file viewer (whetting the appetite)
-   convenience features?
-   fontification, especially variable highlighting
-   Ansys menu
-   command-help   M-n/p M-?
-   code navigation (number blocks in .inp) C-c {
--- APDL hacking
-   	C-c C-u, C-c C-c
-   	$ needs space(s)?
-	ansys completion and emacs expansion C-c ] -- -close-block
-	,commands
-	colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
-	preview insert skeletons (alternatively abbrev mode?)
-	display user variables
-	*go not for interactive mode! -> *if *else *endif
-		commenting out
-	selecting blocks C-M-a/b setting mark!
-	loading help navigator
-	display license status	-license-status C-c C-l
--- hardcore Ansys/APDL user <- Linux Notebook/machine
-        switch off menu, tools, scroll-bar
-   	Ansys mode help
-	Emacs-calc
-	- C-c @ outline stuff with indirect-buffer
-        online Ansys/Emacs process and debugging environment
-	C-c C-u, C-c C-c,  C-c C-q
-	tail mode of *.err C-c C-e
-	abort file
-	bookmarks?
-------------------------------
-12.0.1
+- inhibit the unnecessary blink-matching-block display when closing a
+  block behind a block-end keyword
 
-0.) update keywords to V12.0
-1.) remaining font-lock issues, fontifiction levels
-2.) code dissection & gnu coding style
-3.) possible language additions
-4.) feature freeze & checking
-   
-* Sluggish font-locking? 12.0.1
-- choice of fontification level
-- simplify: multi file package -> rework of makefile -> README
-   (require 'feature) -> better load-file?
+- highlight matching block keywords (similar to show-paren-mode) when
+  point is at keyword
 
-* Rework README generation (from "makefile")
-   
-* implement C-c { and } like C-x z (repeate) zzzz
-   
-* Emacs: old-style backquotes?
-   used in the old template macro system
+- Implement highlighting of bracket pairs with the correct level in
+  Ansys GET- and parametric- functions.
 
-*create is only completed by *end
+- highlighting of plot commands inside the /GCMD command
 
-completion of function names: cursor should end within parentheses
+- DEFSUBSTs with DEFUNs inside aren't particularly helpful?
 
-?clear message: ansys-mode perform auto insertion?
-?condition -highlight in the fontlock variable?
+- Emphasise better implied (colon) loops n,(1:6),(2:12:2) => n,1,2 $
+  n,2,4 $... (little used, I know, but any ideas going beyond the
+  colon?).
 
-c*** highlighting
+- startup screen for Ansys mode: Mode help, Ansys version, supressing
+  the startup screen 'ansys-mode-startup-message maybe as advice when
+  sluggish -> compiliation
 
-comment above user variable problem
+- Enable choice for /show,3d or x11 (-start-graphics)
 
-*VAR*VAR highlighting problem
+- generalise -insert-pi in code line ($ PI=...), in comment (\n
+  Pi=...)
 
-==== Important ====
+** Ansys syntax restrictions not (yet) accounted for
+- *set parameter strings may only be 32 character long!
 
-does setting of -hook trigger immediately the effects or is a
-restart necessary? other function as well
+- Character parameters are restricted to only 8 characters.
 
--up/down-block when we are over a begin-keyword and in a block-end
-line
+- *MSG command can only have 9 additional continuation lines
 
-concentrate variable defining functions for user variable search
-and - display.  Variables are getting overwritten with Ansys
-keywords.
+- Code line restriction of 640 characters
 
-component names also fontified as variables? or separate cmlist?
+- Block level restriction of 20 levels of nested *DO loops (except
+  with /INPUT and *USE)
 
-format string for *VWRITE: line(s) below, in parens, when FORTRAN
-format specifiers are used, keyword SEQU povides row numbers, up to
-19 parameters are allowed
+- Block level restriction of 10 levels of nested *IF blocks
 
-what the heck is the *UILIST command?
+- Macro level restriction: 20 macros
 
-make M-C-h more intelligent like M-h
+** unknown Ansys stuff
 
-Enable input directly in the Ansys output buffer (*Ansys*) like in
-the *shell*, *math* or *Python* buffer (run-python)
-a.) enable highlighting of the *Ansys* buffer -> ansys-interactive-mode
-b.) splice any input line behind the BEGIN: symbol in the *Ansys* buffer
+- what the heck is the *UILIST command?
 
-remove vestiges of ansys-mod.el for making ansys-mode.el GPL
-proof.  Check whether octave-mod.el really is GPL compliant, use
--ctave-mod.el from 1997, kill octave-mod.el afterwards in makefile
-read every symbol docu string ->NEW_C or _C or OCTAVE_C
+- Is hyper56 a valid element?
 
-==== Less Important ====
-
-*MSG command can only have 9 additional continuation lines
-
-generalise -insert-pi in code line ($ PI=...), in comment (\n
-Pi=...)
-
-replace/extend column-ruler with ruler-mode or ruler implemented as
--verlay in buffer
-
-Capitalized variable fontification clashes with small letter Ansys
-predicates.  Fx=3 -> *GET,Fx,fsum,,item,fx, make fontification case
-dependent?
-
-startup screen for Ansys mode: Mode help, Ansys version, supressing
-the startup screen
-'ansys-mode-startup-message
- maybe as advice when sluggish -> compiliation
-
-make everything completely customisable, eg auto-insert stuff
-customisable enable Emacs customisation of auto-insert-query and
-
-Fontify *completion list* distinguishing elements: commands,
-functions and keywords.
-
-provide a list of options for the -license function, set this
-function in the defcustom lmstat -a etc.
-
--optimisation (look at regexp with *), nested repetition regexp
--operators
--start-ansys
-
-finding an Ansys /filnam command in current macro file
-and suggesting this as current job-name optionally
-kill old job when called again with working run
-warn and optionally remove the ansys lock file before starting a run
-
-Enable choice for /show,3d or x11 (-start-graphics)
-
-Wrong highlighting of variables in /com, C*** text strings
-variable highlighting overwrites ansys commands with the same name
-dynamic highlighting is only implemented for .mac files
-
-*DO parameters are not restricted to the respective block deleting
-parameters with `PARAM=' or `*SET,PARAM,' is not taken into account
-when dynamically highlighting user variables.  Redefinition of
-variables leaves the old definitions valid ->invalidate
-font-locking there.  Variable highlighting in strings is not
-working (string substitution).  display-user-variables displays
-message strings as well
-
-make the line number display in `ansys-display-variables'
-(hyper-)links to the corresponding code line in the respective APDL
-file.  (See `occur' function.)  Or use the imenu mechanism for this
-and display the variables in the speedbar
-
-auto-indent-switch as defcustom?
-
-inhibit the unnecessary blink-matching-block display when closing a
-block behind a block-end keyword
-
-highlight matching block keywords (similar to show-paren-mode) when
-point is at keyword
-
-Implement highlighting of brackets with the correct level in Ansys
-GET- and parametric- functions.
-
-highlighting of plot commands inside the /GCMD command
-
-Warn when - unintentionally - arguments are used for Ansys commands
-which do not allow arguments.  Or implement some auto-newline
-feature?  But problematic in condensed command lines
--r when applying code comments!
-
-Indicate that character parameters are restricted to only 8
-characters.
-
-DEFSUBSTs with DEFUNs inside aren't particularly helpful?
+** additional macro resources
 
 see www.apdl.de for further ideas and extensions
 
-Emphasise better implied (colon) loops n,(1:6),(2:12:2) => n,1,2 $
-n,2,4 $... (little used, I know, but any ideas going beyond the
-colon?).
-
-Code line restriction of 640 characters is not taken care of.
-Block level restriction of 20 levels of nested *DO loops (except
-with /INPUT and *USE)
-Block level restriction of 10 levels of nested *IF blocks
-Macro level restriction: 20 macros
 
 # local variables:
 # mode: outline
